[package]
name = "roze"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "Zero dependancy Windows game engine"
repository = "https://github.com/AttentiveColon/roze"
readme = "README.md"
keywords = ["gamedev", "graphics", "opengl", "game-engine", "sprites"]


[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-msvc"
targets = ["x86_64-pc-windows-msvc"]

[dependencies]
